[gd_scene load_steps=4 format=3 uid="uid://dqicif111sykx"]

[ext_resource type="Texture2D" uid="uid://binx8vqdcurvy" path="res://Assets/Sprites/Player/Hitmark.png" id="1_15t6u"]
[ext_resource type="Script" path="res://Scripts/Player_2.gd" id="1_nbtql"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lvyh"]
size = Vector2(17, 17)

[node name="Player2" type="Area2D"]
script = ExtResource("1_nbtql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4lvyh")

[node name="Hitmark" type="Sprite2D" parent="."]
texture = ExtResource("1_15t6u")

[node name="ObCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 18)
collision_mask = 12

[node name="StickCheckU" type="RayCast2D" parent="."]
target_position = Vector2(0, -9)
collide_with_areas = true

[node name="StickCheckD" type="RayCast2D" parent="."]
target_position = Vector2(0, 9)
collide_with_areas = true

[node name="StickCheckL" type="RayCast2D" parent="."]
target_position = Vector2(-9, 0)
collide_with_areas = true

[node name="StickCheckR" type="RayCast2D" parent="."]
target_position = Vector2(9, 0)
collide_with_areas = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
